<resources>
    <string name="app_name">El Mundo Animal</string>

    <string name="iniciarGoogle">Inicia sesion con Google</string>
    <string name="iniciarEmail">Inicia sesion con email</string>
    <string name="noTienesCuenta">¿No tienes cuenta?</string>
    <string name="registro"><u>¡Registrate!</u></string>
    <string name="nombreCompleto">Nombre Completo</string>
    <string name="telefono">Teléfono</string>
    <string name="Registrarse">Registrarse</string>
    <string name="txtEmail">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="repiteContrasenia">Repite contraseña</string>
    <string name="icono">Icono</string>
    <string name="logo">Logo</string>
    <string name="nickname">Nickname</string>
    <string name="logeate"><u>Logeate!!</u></string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="jugar">Jugar</string>
    <string name="buscar">Buscar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aniadirAnimales">Añadir animales</string>
    <string name="tiposAnimales">Tipos de Animales</string>
    <string name="ayuda">Ayuda</string>
    <string name="irAyuda">Ir a Ayuda</string>
    <string name="textoBuscar">Buscador de animales </string>
    <string name="puntuacion">Puntuacion</string>
    <string name="quieresJugar">¿Quieres jugar al Trivia Animal?</string>
    <string name="topRanking">Top Ranking</string>
    <string name="imagen">Imagen</string>
    <string name="tuNickname">nickname</string>
    <string name="tuPuntacion">0 pts</string>
    <string name="tuNombre">Hola,</string>
    <string name="informacionJuego">Informacion del juego</string>
    <string name="irInformacionJuego">Ir a la información del juego</string>
    <string name="cambioConstrasenia">Cambiar Contraseña</string>
    <string name="irContacto">Ir a Contacto!!</string>
    <string name="finalizarSesion">Finalizar Sesion</string>
    <string name="cargando">Cargando...</string>
    <string name="contraseniaActual">Contraseña Actual</string>
    <string name="tituloCambiarContrasenia">A continuación puedes cambiar la contraseña</string>
    <string name="nuevaContrasenia">Nueva Contraseña</string>
    <string name="btnCambiar">Cambiar</string>
    <string name="cambiarDatosPerfil">Cambiar Datos del Perfil</string>
    <string name="eliminarUsuario">Eliminar Usuario</string>
    <string name="eliminar">Eliminar</string>
    <string name="video">Video</string>
    <string name="descripcion">Descripcion: </string>
    <string name="aniadir">Añadir!!</string>
    <string name="tipo">Tipo</string>
    <string name="urlFoto">URL de la foto</string>
    <string name="valueVideo">Value del video</string>
    <string name="controlPeticionesAnimales">Control de Peticiones de Animales</string>
    <string name="controlAnimales">Control de Animales (Administradores)</string>
    <string name="irAControl">ir a Control</string>
    <string name="txtSeccionAnimales">Seccion de animales de: </string>
    <string name="accesoAdministrador">Logueate para poder acceder al controlador de peticiones de animales</string>
    <string name="txtUsuario">Usuario</string>
    <string name="aceptar">Aceptar</string>
    <string name="vidas">Total de vidas: </string>
    <string name="a">A </string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="descripcionPregunta">DescPregunta</string>
    <string name="txtBuscador">Escribe el nombre del animal</string>
    <string name="idPregunta">ID Pregunta</string>
    <string name="enviar">Enviar</string>
    <string name="contacto">Contacto</string>
    <string name="asunto">Asunto</string>
    <string name="contenido">Contenido</string>
    <string name="campoVacio">Campo Vacio</string>
    <string name="olvidarContrasenia"><u>Recuperar contraseña</u></string>
    <string name="txtResetearContrasenia">Escribe a continuacion el correo electronico donde deseas resetar la contraseña</string>
    <string name="txtEstaAplicacion">¿Qué es el Mundo Animal?</string>
    <string name="txtDescripcion">Es una app Android para el aprendizaje de los niños sobre el mundo animal</string>
    <string name="esSeguro">¿Es seguro para los niños?</string>
    <string name="txtSafeForWork">Si, es totalmente seguro no contiene ningun tipo de anuncios ni pagos que puedan ocasionar alguna incidencia
    </string>
    <string name="bugs">Seguramente sea por no actualizar a una version mas nueva, se recomienda siempre descargarla e instalar
    desde las tiendas de app oficiales</string>
    <string name="txtNoFuncion">¿No funciona correctamente?</string>
    <string name="version">Version</string>
    <string name="txtVersion">El Mundo Animal v.1.6</string>
    <string name="txtJuego">¿Que es el juego?</string>
    <string name="txtJuegoDescripcion">Es un trivia academico donde se le preguntara diversos animales tienes 4 posibles respuestas,
    y las preguntas son ilimitadas, ya que tienes 3 vidas al perder la puntuacion se te guardara como usuario</string>

</resources>