<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/azul"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nicolasfernandez.elmundoanimal.actividades.Registro">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icono">

        <EditText
            android:id="@+id/nombreCompleto"
            style="@style/estiloEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/nombreCompleto"
            android:ems="10"
            android:hint="@string/nombreCompleto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/nickname"
            android:autofillHints="@string/nickname"
            style="@style/estiloEditText"
            android:inputType="textPersonName"
            android:ems="10"
            />

        <EditText
            android:id="@+id/loginEmail"
            style="@style/estiloEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/txtEmail"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/loginContraseña"
            style="@style/estiloEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"

            android:hint="@string/contrasenia"
            android:autofillHints="@string/contrasenia"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/repiteContrasenia"

            style="@style/estiloEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints="@string/repiteContrasenia"
            android:hint="@string/repiteContrasenia"
            android:inputType="textPassword"
             />

    </LinearLayout>

    <TextView
        android:id="@+id/txtRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"

        android:textColor="@color/rojoCarmin"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLoginEmail"
        android:layout_width="0dp"
        android:onClick="Registrar"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_round"
        android:text="@string/Registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/icono"
        android:contentDescription="@string/icono"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistrarse"
        app:srcCompat="@drawable/icono" />

</androidx.constraintlayout.widget.ConstraintLayout>